Added Tasks 6, 7 for M2